--- a/blocks/page/__main/page__main.css
+++ b/blocks/page/__main/page__main.css
@@ -1,21 +1,19 @@
-@import url(./__image/header__image.css);
-@import url(./_disable/header_disable.css);
+@import url(./_disable/page__main_disable.css);
 
-.header {
+.page__main {
     width: calc(100% - 400px);
     margin: 0 auto;
     padding: 0;
-    border-bottom: 1px solid rgba(84, 84, 84, .7);
 }
 
 @media screen and (max-width: 900px) {
-    .header {
+    .page__main {
         width: calc(100% - 100px);
     }
 }
 
 @media screen and (max-width: 425px) {
-    .header {
-        width: 100%;
+    .page__main {
+        width: calc(100% - 38px);
     }
 }
