--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,21 +1,20 @@
-@import url(./__image/header__image.css);
-@import url(./_disable/header_disable.css);
+@import url(./__copyrigth/footer__copyrigth.css);
+@import url(./_disable/footer_disable.css);
 
-.header {
+.footer {
     width: calc(100% - 400px);
     margin: 0 auto;
     padding: 0;
-    border-bottom: 1px solid rgba(84, 84, 84, .7);
 }
 
 @media screen and (max-width: 900px) {
-    .header {
+    .footer {
         width: calc(100% - 100px);
     }
 }
 
 @media screen and (max-width: 425px) {
-    .header {
-        width: 100%;
+    .footer {
+        width: calc(100% - 38px);
     }
 }
