--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,4 +1,7 @@
+@import url(./__main/page__main.css);
+
 .page {
+    font-family: Inter, Fallback, sans-serif;
     background-color: #000;
     max-width: 1280px;
     margin: 0 auto;
