--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,10 @@
+@import url(../vendors/fonts.css);
 @import url(../styles/normalize.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
+@import url(../blocks/profile/profile.css);
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/card/card.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/form/form.css);
+@import url(../blocks/form/_disabled/form_disable.css);
