--- a/blocks/card/__name/card__name.css
+++ b/blocks/card/__name/card__name.css
@@ -1,8 +1,8 @@
 .card__name {
     display: block;
     width: calc(100% - 23px);
-    white-space: nowrap;  
-    overflow: hidden !important;
+    white-space: nowrap; 
+    overflow: hidden;
     text-overflow: ellipsis;
     font-weight: 900;
     font-size: 24px;
