--- a/blocks/form/__text-input/form__text-input.css
+++ b/blocks/form/__text-input/form__text-input.css
@@ -7,5 +7,5 @@
     line-height: 17px;
     padding: 0;
     box-sizing: content-box;
-    border-bottom: 1px solid rgba(0, 0, 0, .2)
+    border-bottom: 1px solid rgba(0, 0, 0, .2);
 }
