fix: secound update

--- a/blocks/card/__name/card__name.css
+++ b/blocks/card/__name/card__name.css
@@ -7,5 +7,11 @@
     font-weight: 900;
     font-size: 24px;
     line-height: 29px;
-    height: 1.2em;
+    margin: 20px 0 25px
+}
+
+@media screen and (max-width: 425px) {
+    .card__name {
+        margin-bottom: 31px;
+    }
 }
