--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -3,4 +3,12 @@
     flex-direction: column;
     align-self: center;
     margin: 0 0 0 22.5px;
+    width: calc(100% - 160px);
+    max-width: 420px;
+}
+
+@media screen and (max-width: 520px) {
+    .profile__info {
+        width: auto;
+    }
 }
