--- a/blocks/card/__heart/card__heart.css
+++ b/blocks/card/__heart/card__heart.css
@@ -7,6 +7,7 @@
     background-repeat: no-repeat;
     border: 1.5px solid white;
     box-sizing: border-box;
+    cursor: pointer;
 }
 
 .card__heart:hover {
