--- a/blocks/footer/__copyrigth/footer__copyrigth.css
+++ b/blocks/footer/__copyrigth/footer__copyrigth.css
@@ -4,3 +4,9 @@
     color: #545454;
     margin: 68px 0 60px;
 }
+
+@media screen and (max-width: 425px) {
+    .footer__copyrigth {
+        margin: 50px 0 36px;
+    }
+}
