--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,4 +1,5 @@
 .profile__edit-button {
+    align-self: center;
     width: 24px;
     height: 24px;
     background-color: black;
@@ -8,13 +9,14 @@
     border: 1px solid #FFFFFF;
     margin: 0 0 0 10px;
     box-sizing: border-box;
+    cursor: pointer;
 }
 
 .profile__edit-button:hover {
     opacity: .6;
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 520px) {
     .profile__edit-button{
         width: 18px;
         height: 18px;
