--- a/blocks/profile/__info-container/profile__info-container.css
+++ b/blocks/profile/__info-container/profile__info-container.css
@@ -1,8 +1,9 @@
 .profile__info-container {
     display: flex;
+    width: calc(100% - 160px);
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 520px) {
     .profile__info-container {
         flex-direction: column;
         align-items: center;
