--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,4 +1,8 @@
 .profile__name {
+    width: calc(100% - 34px);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     font-weight: 500;
     font-size: 42px;
     line-height: 48px;
@@ -6,10 +10,11 @@
     margin: 0;
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 520px) {
     .profile__name {
         font-size: 22px;
-    line-height: 27px;
-    text-align: center;
+        line-height: 27px;
+        text-align: center;
+        width: auto;
     }
 }
