--- a/blocks/card/__name/card__name.css
+++ b/blocks/card/__name/card__name.css
@@ -7,7 +7,7 @@
     font-weight: 900;
     font-size: 24px;
     line-height: 29px;
-    margin: 20px 0 25px
+    margin: 20px 0 25px;
 }
 
 @media screen and (max-width: 425px) {
