--- a/blocks/footer/__copyrigth/footer__copyrigth.css
+++ b/blocks/footer/__copyrigth/footer__copyrigth.css
@@ -7,6 +7,8 @@
 
 @media screen and (max-width: 425px) {
     .footer__copyrigth {
+        font-size: 14px;
+        line-height: 17px;
         margin: 50px 0 36px;
     }
 }
