--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -1,4 +1,4 @@
-.form__close-button {
+.popup__close-button {
     position: absolute;
     top: -40px;
     right: -40px;
@@ -15,12 +15,12 @@
     cursor: pointer;
 }
 
-.form__close-button:hover {
+.popup__close-button:hover {
     opacity: .6;
 }
 
 @media screen and (max-width: 530px) {
-    .form__close-button {
+    .popup__close-button {
         right: 0;
         width: 26px;
         height: 26px;
