--- a/blocks/popup/__heading/popup__heading.css
+++ b/blocks/popup/__heading/popup__heading.css
@@ -1,4 +1,4 @@
-.form__heading {
+.popup__heading {
     width: 100%;
     margin: 0 0 24px;
     font-weight: 900;
@@ -7,7 +7,7 @@
 }
 
 @media screen and (max-width: 450px) {
-    .form__heading{
+    .popup__heading{
         margin-bottom: 46px;
         font-size: 18px;
         line-height: 22px;
