--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -1,4 +1,4 @@
-.form__save-button {
+.popup__save-button {
     border-radius: 2px;
     height: 50px;
     width: 100%;
@@ -11,12 +11,12 @@
     cursor: pointer;
 }
 
-.form__save-button:hover {
+.popup__save-button:hover {
     opacity: .8;
 }
 
 @media screen and (max-width: 450px) {
-    .form__save-button {
+    .popup__save-button {
         margin-bottom: 0;
     }
 }
