--- a/blocks/profile/__name-container/profile__name-container.css
+++ b/blocks/profile/__name-container/profile__name-container.css
@@ -1,4 +1,10 @@
 .profile__name-container {
     display: flex;
-    width: 100%;
+    width: 100%;    
+}
+
+@media screen and (max-width: 520px) {
+    .profile__name-container {
+        justify-content: center;
+    }
 }
