--- a/pages/index.css
+++ b/pages/index.css
@@ -8,3 +8,4 @@
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/_disabled/popup_disable.css);
+@import url(../blocks/big-screen-image/big-screen-image.css);
