--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -2,8 +2,12 @@
 @import url(./__heart/card__heart.css);
 @import url(./__name/card__name.css);
 @import url(./__image/card__image.css);
+@import url(./__heart/_active/card__heart_active.css);
+@import url(./__delete/card__delete.css);
+@import url(./__image-container/card__image-container.css);
 
 .card {
+    position: relative;
     background-color: white;
     box-sizing: border-box;
     border: 0;
