--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -14,5 +14,7 @@
     z-index: 1;
     display: flex;
     align-items: center;
+    visibility: visible;
+    opacity: 1;
+    transition: visibility .2s, opacity .2s linear;
 }
-
