--- a/blocks/card/__image/card__image.css
+++ b/blocks/card/__image/card__image.css
@@ -2,6 +2,7 @@
     position: absolute;
     top: 0;
     width: 100%;
-    border-radius: 10px 10px 0 0;
+    height: 100%;
+    object-fit: cover;
     cursor: pointer;
 }
