feat: Validating the New Place Form

--- a/blocks/popup/__save-button/_inactive/popup__save-button_inactive.css
+++ b/blocks/popup/__save-button/_inactive/popup__save-button_inactive.css
@@ -3,3 +3,10 @@
     color: black;
     opacity: 0.2;
 }
+
+.popup__save-button_inactive:hover {
+    background-color: #E5E5E5;
+    color: black;
+    opacity: 0.2;
+    cursor: auto;
+}
