--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -2,7 +2,7 @@
     position: absolute;
     top: -40px;
     right: -40px;
-    background-image: url(../../../images/Close\ Icon.svg);
+    background-image: url(../../../images/Close-Icon.svg);
     background-color: transparent;
     width: 40px;
     height: 40px;
