--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -6,6 +6,9 @@
 @import url(./__text-input-error/popup__text-input-error.css);
 @import url(./__text-input/_type_error/popup__text-input_type_error.css);
 @import url(./__save-button/_inactive/popup__save-button_inactive.css);
+@import url(./__save-button/_content_delete/popup__save-button_content_delete.css);
+@import url(./popup__form/_content_delete/popup__form_content_delete.css);
+@import url(./popup__form/_content_change-profile-picture/popup__form_content_change-profile-picture.css);
 
 .popup {
     background: rgba(0, 0, 0, .5);
