--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -6,6 +6,9 @@
 @import url(./__add-button/profile__add-button.css);
 @import url(./__info-container/profile__info-container.css);
 @import url(./__name-container/profile__name-container.css);
+@import url(./__edit-container/profile__edit-container.css);
+@import url(./__avatar-container/profile__avatar-container.css);
+@import url(./__edit-image/profile__edit-image.css);
 
 .profile {
     display: flex;
